# rm01-esp32s3-bsp

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/console_interface/: CMakeLists.txt  README.md  console_interface.c
components/console_interface/include/: console_interface.h
components/device_interface/: CMakeLists.txt  device_interface.c
components/device_interface/include/: device_interface.h
components/hardware_control/: CMakeLists.txt  hardware_control.c  hardware_control_backup.c  hardware_control_new.c
components/hardware_control/include/: hardware_config.h  hardware_control.h  hardware_control_temp.h
components/system_monitor/: CMakeLists.txt  system_monitor.c
components/system_monitor/include/: system_monitor.h
main/: CMakeLists.txt  hardware_config.h  main.c
markdown/: CLEANUP_SUMMARY.md  CONSOLE_GUIDE.md  CONSOLE_REFACTOR_SUMMARY.md  CONSOLE_USAGE_GUIDE.md  HARDWARE_DEBUG_GUIDE.md  POWER_CONTROL_INTEGRATION_REPORT.md  PROJECT_SUMMARY.md  README_COMPONENTS.md  README_CONSOLE.md  REFACTOR_COMPLETE_REPORT.md  UART_FIX_GUIDE.md  USB_MUX_CONTROL_GUIDE.md  USB_MUX_DEVELOPMENT_REPORT.md
